force-app/main/default/objects/GPTfy_Settings__c/GPTfy_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>GPTfy Settings</label>
</CustomObject>