force-app/main/default/objects/GPTfy_Settings__c/fields/Additional_Input_Separator__c.field-meta.xml
<CustomField>
    <fullName>Additional_Input_Separator__c</fullName>
    <label>Additional Input Separator</label>
    <type>TextArea</type>
</CustomField>