force-app/main/default/objects/GPTfy_Settings__c/fields/Blank_Replacement_Value__c.field-meta.xml
<CustomField>
    <fullName>Blank_Replacement_Value__c</fullName>
    <label>Blank Replacement Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>