force-app/main/default/objects/GPTfy_Settings__c/fields/Data_Cloud_Named_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Named_Credentials__c</fullName>
    <label>Data Cloud Named Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>