force-app/main/default/objects/GPTfy_Settings__c/fields/Enable_for_Data_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_Data_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable for Data Cloud</label>
    <type>Checkbox</type>
</CustomField>