force-app/main/default/objects/GPTfy_Settings__c/fields/File_Processing__c.field-meta.xml
<CustomField>
    <fullName>File_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If enabled, GPTfy prompts allow file to be attached to an AI call-out.</inlineHelpText>
    <label>File Processing</label>
    <type>Checkbox</type>
</CustomField>