force-app/main/default/objects/GPTfy_Settings__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <inlineHelpText>List of file types that are allowed to be processed by AI.</inlineHelpText>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>