force-app/main/default/objects/GPTfy_Settings__c/fields/Hourly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Cost__c</fullName>
    <defaultValue>100</defaultValue>
    <inlineHelpText>Average employee hourly cost. This is used by all of the ROI reports.</inlineHelpText>
    <label>Hourly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>