force-app/main/default/objects/GPTfy_Settings__c/fields/Max_File_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_File_Count__c</fullName>
    <inlineHelpText>Max number of files that are allowed to be attached to a prompt callout.</inlineHelpText>
    <label>Max File Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>