force-app/main/default/objects/GPTfy_Settings__c/fields/Max_File_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_File_Size__c</fullName>
    <inlineHelpText>Max file size in MB that is allowed to be attached to a prompt call-out.</inlineHelpText>
    <label>Max File Size (in MB)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>