force-app/main/default/objects/GPTfy_Settings__c/fields/Prefix_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Prefix_Suffix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prefix/Suffix</label>
    <type>Checkbox</type>
</CustomField>