force-app/main/default/objects/GPTfy_Settings__c/fields/Prompt_Versioning__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Versioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prompt Versioning</label>
    <type>Checkbox</type>
</CustomField>