force-app/main/default/objects/GPTfy_Settings__c/fields/Salesforce_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Admin_Email__c</fullName>
    <label>Salesforce Admin Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>