force-app/main/default/objects/GPTfy_Settings__c/fields/Salesforce_Auth_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Auth_Named_Credential__c</fullName>
    <label>Salesforce Auth Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>