force-app/main/default/objects/GPTfy_Settings__c/fields/Salesforce_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Client_Id__c</fullName>
    <label>Salesforce Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>