force-app/main/default/objects/GPTfy_Settings__c/fields/Salesforce_Domain_URL__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Domain_URL__c</fullName>
    <label>Salesforce Domain URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>