force-app/main/default/objects/GPTfy_Settings__c/fields/Salesforce_Private_Key_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Private_Key_File_Id__c</fullName>
    <label>Salesforce Private Key File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>