force-app/main/default/objects/GPTfy_Settings__c/fields/Typewriter_Effect__c.field-meta.xml
<CustomField>
    <fullName>Typewriter_Effect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Typewriter Effect</label>
    <type>Checkbox</type>
</CustomField>